<resources>
    <string name="app_name">Laundry</string>
    <string name="card_pelanggan_id">ID Pelanggan</string>
    <string name="card_pelanggan_nama">Nama Pelanggan</string>
    <string name="card_pegawai_id">ID Pegawai</string>
    <string name="card_pegawai_nama">Nama Pegawai</string>
    <string name="alamat">Alamat</string>
    <string name="nohp">No HP</string>
    <string name="terdaftar">Terdaftar</string>
    <string name="cabang">Cabang</string>
    <string name="tambah_pelanggan">Tambah Pelanggan</string>
    <string name="simpan">Simpan</string>
    <string name="tambah_pagawai">Tambah Pegawai</string>
    <string name="card_layanan_id">ID Layanan</string>
    <string name="card_layanan_nama">Nama Layanan</string>
    <string name="harga">Harga</string>
    <string name="tambah_layanan">Tambah Layanan</string>
    <string name="sukses_simpan_pelanggan">Data berhasil disimpan</string>
    <string name="gagal_simpan_pelanggan">Gagal menyimpan data</string>
    <string name="erNama">Nama tidak boleh kosong</string>
    <string name="erAlamat">Alamat tidak boleh kosong</string>
    <string name="erNoHP">No HP tidak boleh kosong</string>
    <string name="erCabang">Cabang tidak boleh kosong</string>
    <string name="Hubungi">Hubungi</string>
    <string name="Lihat">Lihat</string>
    <string name="erTerdaftar">Terdaftar tidak boleh kosong</string>
</resources>